# ElyxBuilder

./: README.md
docs/: en.md  ru.md
package/: README.md  pyproject.toml
package/src/: cli.py  config.json  main.py
package/src/cmds/: build.py  cached.py  ignore.py  new.py  obfuscate.py  stats.py  version.py  watch.py
package/src/cmds/components/: progress.py
