[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ElyxBuilder"
version = "0.6.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
elyb = "elyb.cli:main"

[tool.setuptools]
packages = ["elyb", "elyb.cmds", "elyb.cmds.components"]

[tool.setuptools.package-dir]
elyb = "src"
"elyb.cmds" = "src/cmds"
"elyb.cmds.components" = "src/cmds/components"

[tool.setuptools.package-data]
elyb = ["config.json"]